--- a/BluffMastrX/Views/Landing.xaml
+++ b/BluffMastrX/Views/Landing.xaml
@@ -4,8 +4,8 @@ xmlns="http://xamarin.com/schemas/2014/forms"
 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 x:Class="BluffMastrX.Landing">
 	<ContentPage.Content>
-	   <StackLayout Padding="10,20,10,10">
-	        <Label Text = "BluffMastr" HorizontalOptions = "CenterAndExpand"></Label>
+	   <StackLayout>
+	        <Label x:Name="AppLabel" Text = "BluffMastr" HeightRequest="100" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontAttributes="Bold" FontSize="24" FontFamily="MarkerFelt-Thin" BackgroundColor="Red" TextColor="White"></Label>
 			<Frame HorizontalOptions="Center" WidthRequest="300" HeightRequest="250" VerticalOptions= "Center" >
 				<StackLayout Padding="20" HorizontalOptions="CenterAndExpand" >
 					<Button Text = "Create Game" WidthRequest="100" TextColor="White" Clicked="NewGame"  BackgroundColor= "#43CD80"></Button>
